@@ -1,3 +1,13 @@
+2010-09-09  Ivan Maidanski <ivmai@mail.ru> (with input from Ludovic Courtes)
+
+	* include/private/specific.h (quick_thread_id): Define thru
+	GC_approx_sp(); define as a macro.
+	* include/private/specific.h (getspecific): Use GC_INLINE instead
+	of __inline__ (to work around Sun CC which does not recognize
+	inline keyword surrounded with underscores).
+	* include/private/specific.h: Expand all tabs to spaces; remove
+	trailing spaces at EOLn.
+
 2010-09-04  Ivan Maidanski <ivmai@mail.ru>
 
 	* darwin_stop_world.c (FindTopOfStack): Simplify condition
